RESOLVED FIXED260379
hasContentNone bit missing from NonInheritedFlags copy function
https://bugs.webkit.org/show_bug.cgi?id=260379
Summary hasContentNone bit missing from NonInheritedFlags copy function
Antti Koivisto
Reported 2023-08-18 00:02:12 PDT
fix it
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-18 00:02:28 PDT
Antti Koivisto
Comment 2 2023-08-18 00:18:07 PDT
EWS
Comment 3 2023-08-18 01:22:05 PDT
Committed 267034@main (e78360b69456): <https://commits.webkit.org/267034@main> Reviewed commits have been landed. Closing PR #16825 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.