hasContentNone bit missing from NonInheritedFlags copy function https://bugs.webkit.org/show_bug.cgi?id=260379 rdar://problem/114069451

Reviewed by Alan Baradlay.

* LayoutTests/imported/w3c/web-platform-tests/css/css-pseudo/marker-computed-content-expected.txt:
* Source/WebCore/rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::RenderStyle):
(WebCore::RenderStyle::NonInheritedFlags::copyNonInheritedFrom):

Also reorganize to match the field order and add a few other missing bits.

* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::RenderStyle::NonInheritedFlags::operator== const):

Canonical link: https://commits.webkit.org/267034@main